add map function

--- a/map.html
+++ b/map.html
@@ -128,7 +128,14 @@ border="0" class="namo-hibutton2" alt="公司位置圖" align="texttop"></div>
 
                         <p><b>公司位置圖：</b></p>
                         
-            <p><img src="images%5C023.jpg" width="1061" height="757"></p>
+                        <iframe
+                          src="https://www.google.com/maps?q=明璟實業有限公司&hl=zh-TW&z=17&output=embed"
+                          width="1120"
+                          height="860"
+                          style="border:0;"
+                          allowfullscreen=""
+                          loading="lazy">
+                        </iframe>
                         <p>&nbsp;  </p>
                     </td>
                 </tr>
