update img's src to right url

--- a/product.html
+++ b/product.html
@@ -138,7 +138,7 @@ ZH-TW;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA'><b>MA系列</b></span>
                 <tr>
                     <td width="185" valign="middle">
 
-                        <p align="left">&nbsp;  <a href="product_1.html"><img src="images/MJ/mini-min-jing - 1.jpg" width="175" height="252" border="0"></a></p>
+                        <p align="left">&nbsp;  <a href="product_1.html"><img src="images/mj/mini-min-jing - 1.jpg" width="175" height="252" border="0"></a></p>
                     </td>
                     <td width="405" valign="middle">
                         <p><span lang=EN-US style='font-family:新細明體;mso-hansi-font-family:
@@ -160,7 +160,7 @@ ZH-TW;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA'><b>MB系列</b></span>
                 <tr>
                     <td width="185" valign="middle">
 
-                        <p>&nbsp;  <a href="product_2.html"><img src="images/MJ/mini-min-jing - 2.jpg" width="175" height="250" border="0"></a></p>
+                        <p>&nbsp;  <a href="product_2.html"><img src="images/mj/mini-min-jing - 2.jpg" width="175" height="250" border="0"></a></p>
                     </td>
                     <td width="405" valign="middle">
                         <p>&nbsp;&nbsp;<span lang=EN-US style='font-size:12.0pt;font-family:
@@ -181,7 +181,7 @@ ZH-TW;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA'><b>MC系列</b></span>
                 <tr>
                     <td width="185" valign="middle">
 
-                        <p>&nbsp;  <a href="product_3.html"><img src="images/MJ/mini-min-jing - 3.jpg" width="175" height="253" border="0"></a></p>
+                        <p>&nbsp;  <a href="product_3.html"><img src="images/mj/mini-min-jing - 3.jpg" width="175" height="253" border="0"></a></p>
                     </td>
                     <td width="405" valign="middle">
                         <p>&nbsp;&nbsp;<span lang=EN-US style='font-size:12.0pt;font-family:
@@ -202,7 +202,7 @@ ZH-TW;mso-fareast-language:ZH-TW;mso-bidi-language:AR-SA'><b>MD系列</b></span>
                 <tr>
                     <td width="185" valign="middle">
 
-                        <p>&nbsp;  <a href="product_4.html"><img src="images/MJ/mini-min-jing - 4.jpg" width="177" height="253" border="0"></a></p>
+                        <p>&nbsp;  <a href="product_4.html"><img src="images/mj/mini-min-jing - 4.jpg" width="177" height="253" border="0"></a></p>
                     </td>
                     <td width="405" valign="middle">
                         <p>&nbsp;&nbsp;<span lang=EN-US style='font-size:12.0pt;font-family:
